--- a/index.html
+++ b/index.html
@@ -231,63 +231,54 @@
           </div>
         </div>
 
+        <!-- 導覽 -->
         <div
           class="border p-10 wrap md-col align-items-center justify-content-center md-justify-content-start sticky secondary"
         >
-          <a class="hover-text m-10" href="expertise">專長</a>
-          <a class="hover-text m-10" href="">專案成就</a>
-          <a class="hover-text m-10" href="">工作經歷</a>
-          <a class="hover-text m-10" href="">求職條件</a>
-          <a class="hover-text m-10" href="">學歷</a>
-          <a class="hover-text m-10" href="">自傳</a>
+          <a class="hover-text m-10" href="#expertise">專長</a>
+          <a class="hover-text m-10" href="#project">專案成就</a>
+          <a class="hover-text m-10" href="#work_experience">工作經歷</a>
+          <a class="hover-text m-10" href="#education">學歷</a>
+          <a class="hover-text m-10" href="#autobiography">自傳</a>
         </div>
       </header>
 
       <article class="border md-ml-10 p-10 col width80 sm-mt-10">
         <div id="expertise">
           <h2>專長</h2>
-          <h4>內文</h4>
-          <span>內文...</span>
+          <h4>前端技能樹</h4>
+          <ul>
+            <li>
+              ReactJS框架 懂得基本Hook，會基本操作，能做出簡易網站 <br />
+              （結合使用過React-router、React-Bootstrap、i18n多國語系等)
+            </li>
+            <li>VueJS使用過，懂得v-if, v-for, v-model</li>
+            <li>
+              JavaScript 視狀況變化運用及理解基本規則，曾在平台LidemyOJ
+              (LIOJ)練習題目
+            </li>
+            <li>jQuery 會運用及理解基本規則</li>
+            <li>對ES6 會基本操作 (EX: Arrow Funtion、模組系統、解構賦值等)</li>
+            <li>HTML5, CSS3 能運用並製作出網站，習慣使用flex切版</li>
+            <li>Bootstrap4 會套用及理解基本規則</li>
+            <li>Scss 會基本操作</li>
+            <li>會使用RWD響應式技術</li>
+            <li>NodeJS 能安裝解除套件、專案初始化、建立刪除目錄等操作</li>
+          </ul>
         </div>
-        <div>
-          <h2>專長</h2>
-          <h4>內文</h4>
-          <span>內文...</span>
+
+        <div id="project">
+          <h2>專案成就</h2>
+          
         </div>
-        <div>
-          <h2>專長</h2>
-          <h4>內文</h4>
-          <span>內文...</span>
+        <div id="work_experience">
+          <h2>工作經歷</h2>
         </div>
-        <div>
-          <h2>專長</h2>
-          <h4>內文</h4>
-          <span>內文...</span>
+        <div id="education">
+          <h2>學歷</h2>
         </div>
-        <div>
-          <h2>專長</h2>
-          <h4>內文</h4>
-          <span>內文...</span>
-        </div>
-        <div>
-          <h2>專長</h2>
-          <h4>內文</h4>
-          <span>內文...</span>
-        </div>
-        <div>
-          <h2>專長</h2>
-          <h4>內文</h4>
-          <span>內文...</span>
-        </div>
-        <div>
-          <h2>專長</h2>
-          <h4>內文</h4>
-          <span>內文...</span>
-        </div>
-        <div>
-          <h2>專長</h2>
-          <h4>內文</h4>
-          <span>內文...</span>
+        <div id="autobiography">
+          <h2>自傳</h2>
         </div>
       </article>
     </div>
