--- a/index.html
+++ b/index.html
@@ -49,12 +49,6 @@
         border-radius: 10px;
       }
 
-      .border-left {
-        border-style: solid;
-        border-color: var(--third-color);
-        border-width: 0 0 0 5px;
-      }
-
       .row {
         display: flex;
       }
@@ -114,10 +108,6 @@
         top: 10px;
       }
 
-      .relative {
-        position: relative;
-      }
-
       .justify-content-center {
         justify-content: center;
       }
@@ -130,27 +120,11 @@
         align-items: center;
       }
 
-      .align-items-between {
-        align-items: space-between;
-      }
-
       .footer {
         position: fixed;
         bottom: 0;
         width: 100%;
         border-radius: 20px 20px 0 0;
-      }
-
-      .width100 {
-        width: 100%;
-      }
-
-      .width85 {
-        width: 85%;
-      }
-
-      .width15 {
-        width: 15%;
       }
 
       .sm-hide {
@@ -161,24 +135,12 @@
         display: none;
       }
 
-      .shadow {
-        box-shadow: black;
-      }
-
       a {
         text-decoration: none;
         font-weight: bolder;
       }
 
-      .hr-big {
-        width: 80%;
-        border-style: dotted;
-        border-color: var(--third-color);
-        border-width: 15px 0 0 0;
-        margin-top: 10px;
-      }
-
-      .hr-small {
+      hr {
         width: 80%;
         border-style: dotted;
         border-color: var(--third-color);
@@ -186,17 +148,14 @@
         margin-top: 10px;
       }
 
+      /* 頭貼 */
       .project-img {
         max-width: 100%;
       }
 
+      /*點超連結，滾軸滑動特效*/
       html {
         scroll-behavior: smooth;
-      }
-
-      .small-icon {
-        width: 30px;
-        height: auto;
       }
 
       .pointer {
@@ -248,6 +207,7 @@
         }
       }
 
+      /*翻轉文字特效*/
       .hover-text {
         --h: 1.2em;
         line-height: var(--h);
@@ -470,7 +430,7 @@
               </li>
             </ul>
 
-            <hr class="hr-small" />
+            <hr/>
           </div>
 
           <div class="reveal">
@@ -486,7 +446,7 @@
               <li>製作簡報</li>
             </ul>
 
-            <hr class="hr-small" />
+            <hr/>
           </div>
           <div class="reveal">
             <h3>服務顧問師</h3>
@@ -502,7 +462,7 @@
               <li>內部提出改善建議</li>
             </ul>
 
-            <hr class="hr-small" />
+            <hr/>
           </div>
           <div class="reveal">
             <h2>國遠距教學學伴</h2>
